# blockchain-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs  network.rs  tests.rs  util.rs
src/blockchain/: block.rs  merkle.rs  mod.rs  transaction.rs  txn.rs  wallet.rs
src/network/: messages.rs  mod.rs  node.rs  server.rs
src/util/: mod.rs  traits.rs
web-client/: package.json
web-client/src/: App.tsx  models.ts  util.ts
