[package]
name = "rust-blockchain"
version = "0.1.0"
authors = ["Prajwal Prakash <prajwalpy6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
crypto-hash = "0.3.4"
actix = "0.10.0-alpha.3"
actix-rt = "1.1"
rand = "0.6.5"  # Todo: Bump version to 0.7.3
ripemd160 = "0.8.0"
bs58 = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
simplelog = "0.8.0"
chrono = "0.4.11"
tungstenite = "0.11.0"

[dependencies.secp256k1]
version = "0.22.2"
features = ["rand"]
